API route ppur update information su rclient
